@@ -1,6 +1,11 @@
 Chronological listing of changes. More detail is usually found in the Git commit messages
 and/or the pull requests.
 
+2013-08-27
+
+* Added a specially typed method for object references to OCMArg.
+
+
 2013-08-17
 
 * Fixed bug that caused matching to be aborted on first ignored non-object arg.
